added db connection and check
